--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.340.0",
     "next": "14.1.0",
     "next-cloudinary": "^6.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
