--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "form-data": "^4.0.0",
     "lucide-react": "^0.340.0",
+    "mailgun.js": "^10.2.1",
     "next": "14.1.0",
     "next-cloudinary": "^6.1.0",
     "next-themes": "^0.2.1",
